# v2board_client

./: CLAUDE.md  README.md  README_EN.md  pubspec.yaml  setup.dart
.claude/: settings.local.json
.github/workflows/: build-core-auto.yaml  build.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/core/: build.gradle.kts
android/core/src/main/cpp/: CMakeLists.txt  core.cpp
arb/: intl_en.arb  intl_ja.arb  intl_ru.arb  intl_zh_CN.arb
lib/: application.dart  controller.dart  core_version.dart  main.dart  state.dart
lib/clash/: core.dart  service.dart
lib/common/: constant.dart  custom_base64.dart  file_logger.dart  mixin.dart  navigation.dart  package.dart  path.dart  print.dart  request.dart  retry_interceptor.dart  utils.dart
lib/enum/: enum.dart
lib/l10n/: l10n.dart
lib/l10n/intl/: messages_en.dart  messages_ja.dart  messages_ru.dart  messages_zh_CN.dart
lib/manager/: app_state_manager.dart  window_manager.dart
lib/models/: clash_config.dart  common.dart  config.dart  models.dart  profile.dart  selector.dart  shop.dart
lib/pages/: home.dart
lib/plugins/: vpn.dart
lib/providers/: config.dart  state.dart
lib/services/: core_updater_service.dart  crypto_service.dart  v2board_config_service.dart  v2board_service.dart
lib/utils/: device_info_service.dart
lib/views/: account.dart  application_setting.dart  resources.dart  tools.dart  v2board_login_gate.dart  views.dart
lib/views/dashboard/: dashboard.dart
lib/views/profiles/: add_profile.dart  edit_profile.dart
lib/views/proxies/: card.dart  common.dart  list.dart  proxies.dart  tab.dart
lib/views/shop/: order_history_view.dart  payment_sheet.dart  plan_detail_view.dart  shop_view.dart
lib/widgets/: scaffold.dart  widgets.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+13 files in other folders)
